# fitness-pal-service

./: .gitignore  main.py  pyproject.toml
db/: fitness.db  fitness_db.py
model/: user.py
